TravelAgency Commit 3 - some style to fix, tests done